--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ VITE_SUPABASE_PUBLISHABLE_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJz
 VITE_SUPABASE_URL="https://ucaqbhmyutlnitnedowk.supabase.co"
 VITE_STOCKFISH_WASM_URL="/engines/stockfish.wasm"
 VITE_PREMIUM_NNUE="false"
+VITE_LOVABLE_API_KEY=""
